[tool.poetry]
name = "httprunner"
version = "0.1.0"
description = ""
authors = ["chenzy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"
# coverage = "^5.1"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
